{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 845,
  "lineage": "3d1c15dd-54e9-3117-8b15-e4787abd037a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f28567958b9816d",
            "arn": "arn:aws:ec2:us-west-2:495599732329:elastic-ip/eipalloc-07f28567958b9816d",
            "domain": "vpc",
            "id": "eipalloc-07f28567958b9816d",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-212-146-43.us-west-2.compute.amazonaws.com",
            "public_ip": "34.212.146.43",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599732329:internet-gateway/igw-0a7c429c90409b408",
            "id": "igw-0a7c429c90409b408",
            "owner_id": "495599732329",
            "vpc_id": "vpc-0f7dbc8a769521f9c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f28567958b9816d",
            "association_id": "eipassoc-05b4e0b6814872c45",
            "connectivity_type": "public",
            "id": "nat-0c0ca0f175f48aeef",
            "network_interface_id": "eni-00de8bfca6178056a",
            "private_ip": "10.0.1.52",
            "public_ip": "34.212.146.43",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04f1e075e03740223"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599732329:route-table/rtb-076c3b387408ddaad",
            "id": "rtb-076c3b387408ddaad",
            "owner_id": "495599732329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c0ca0f175f48aeef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7dbc8a769521f9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_subnet.public_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599732329:route-table/rtb-04c2d58f5356cb84f",
            "id": "rtb-04c2d58f5356cb84f",
            "owner_id": "495599732329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7c429c90409b408",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7dbc8a769521f9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0298004e38875a3c1",
            "route_table_id": "rtb-076c3b387408ddaad",
            "subnet_id": "subnet-07f933df882033ecb"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083ee4875a7ee0ce3",
            "route_table_id": "rtb-04c2d58f5356cb84f",
            "subnet_id": "subnet-04f1e075e03740223"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cfabc61577ea8de",
            "route_table_id": "rtb-04c2d58f5356cb84f",
            "subnet_id": "subnet-0a1011e4633217946"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599732329:subnet/subnet-07f933df882033ecb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f933df882033ecb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599732329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f7dbc8a769521f9c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599732329:subnet/subnet-04f1e075e03740223",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f1e075e03740223",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599732329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f7dbc8a769521f9c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599732329:subnet/subnet-0a1011e4633217946",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1011e4633217946",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599732329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f7dbc8a769521f9c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599732329:vpc/vpc-0f7dbc8a769521f9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049f311ac126c5df3",
            "default_route_table_id": "rtb-00981a016098c7202",
            "default_security_group_id": "sg-06d53eab900282c97",
            "dhcp_options_id": "dopt-071730ffa23d1b15a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f7dbc8a769521f9c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00981a016098c7202",
            "owner_id": "495599732329",
            "tags": {
              "Environment": "dev",
              "Name": "mean-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mean-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:495599732329:loadbalancer/app/mean-load-balancer/aa9d5afc963f719b",
            "arn_suffix": "app/mean-load-balancer/aa9d5afc963f719b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mean-load-balancer-1833245678.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:495599732329:loadbalancer/app/mean-load-balancer/aa9d5afc963f719b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mean-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-039f5e9be1fbc3736"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f1e075e03740223"
              },
              {
                "subnet_id": "subnet-0a1011e4633217946"
              }
            ],
            "subnets": [
              "subnet-04f1e075e03740223",
              "subnet-0a1011e4633217946"
            ],
            "tags": {
              "Name": "mean-load-balancer"
            },
            "tags_all": {
              "Name": "mean-load-balancer"
            },
            "vpc_id": "vpc-0f7dbc8a769521f9c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.this",
            "module.load_balancer_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:495599732329:listener/app/mean-load-balancer/aa9d5afc963f719b/57841bb5cb2c62b4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:495599732329:targetgroup/mean-target-group/72ff78e98814a876",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:495599732329:listener/app/mean-load-balancer/aa9d5afc963f719b/57841bb5cb2c62b4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:495599732329:loadbalancer/app/mean-load-balancer/aa9d5afc963f719b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.this",
            "module.load_balancer.aws_lb.this",
            "module.load_balancer.aws_lb_target_group.this",
            "module.load_balancer_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:495599732329:targetgroup/mean-target-group/72ff78e98814a876",
            "arn_suffix": "targetgroup/mean-target-group/72ff78e98814a876",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:495599732329:targetgroup/mean-target-group/72ff78e98814a876",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mean-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f7dbc8a769521f9c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance_0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:495599732329:targetgroup/mean-target-group/72ff78e98814a876-2025011218042776140000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:495599732329:targetgroup/mean-target-group/72ff78e98814a876",
            "target_id": "i-048b972e0231a3884"
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "module.load_balancer.aws_lb_target_group.this",
            "module.mongodb.aws_instance.this",
            "module.mongodb_sg.aws_security_group.this",
            "module.web_server.aws_instance.this",
            "module.web_server_sg.aws_security_group.this"
          ]
        },
        {
          "index_key": "instance_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:495599732329:targetgroup/mean-target-group/72ff78e98814a876-20250112180427484500000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:495599732329:targetgroup/mean-target-group/72ff78e98814a876",
            "target_id": "i-00bf417c6d5a76d6b"
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "module.load_balancer.aws_lb_target_group.this",
            "module.mongodb.aws_instance.this",
            "module.mongodb_sg.aws_security_group.this",
            "module.web_server.aws_instance.this",
            "module.web_server_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599732329:security-group/sg-039f5e9be1fbc3736",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039f5e9be1fbc3736",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250112180352940200000001",
            "name_prefix": "terraform-",
            "owner_id": "495599732329",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load-balancer-sg"
            },
            "tags_all": {
              "Name": "load-balancer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7dbc8a769521f9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0606dd43116f5ed57",
            "arn": "arn:aws:ec2:us-west-2:495599732329:instance/i-0c95f29560809fee7",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c95f29560809fee7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8992f4e20b97d86",
            "private_dns": "ip-10-0-2-110.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f43e77c6348849a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f933df882033ecb",
            "tags": {
              "Environment": "dev",
              "Role": "mongodb"
            },
            "tags_all": {
              "Environment": "dev",
              "Role": "mongodb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ef1e03f8693afa4"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "module.mongodb_sg.aws_security_group.this",
            "module.web_server_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599732329:security-group/sg-04ef1e03f8693afa4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ef1e03f8693afa4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "terraform-20250112180356595800000004",
            "name_prefix": "terraform-",
            "owner_id": "495599732329",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mongodb-sg"
            },
            "tags_all": {
              "Name": "mongodb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7dbc8a769521f9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this",
            "module.web_server_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0606dd43116f5ed57",
            "arn": "arn:aws:ec2:us-west-2:495599732329:instance/i-048b972e0231a3884",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048b972e0231a3884",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b4d169cc242f9323",
            "private_dns": "ip-10-0-1-154.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.154",
            "public_ip": "54.218.253.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00cf002fc47774bc4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f1e075e03740223",
            "tags": {
              "Environment": "dev",
              "Role": "web-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Role": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c400aed379e70ee"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "module.mongodb.aws_instance.this",
            "module.mongodb_sg.aws_security_group.this",
            "module.web_server_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0606dd43116f5ed57",
            "arn": "arn:aws:ec2:us-west-2:495599732329:instance/i-00bf417c6d5a76d6b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00bf417c6d5a76d6b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01dda049c22d067a7",
            "private_dns": "ip-10-0-1-125.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.125",
            "public_ip": "34.212.45.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b326273272a42646",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f1e075e03740223",
            "tags": {
              "Environment": "dev",
              "Role": "web-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Role": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c400aed379e70ee"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "module.mongodb.aws_instance.this",
            "module.mongodb_sg.aws_security_group.this",
            "module.web_server_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599732329:security-group/sg-01c400aed379e70ee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c400aed379e70ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250112180352945400000002",
            "name_prefix": "terraform-",
            "owner_id": "495599732329",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-sg"
            },
            "tags_all": {
              "Name": "web-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7dbc8a769521f9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}